"Fixed footer image overflow"

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 @tailwind utilities;
 
 @layer base {
+  /* * {
+    outline: 1px solid red !important;
+  } */
+
   html {
     font-family: "Baloo Bhaijaan 2", cursive;
     direction: rtl;
